# JaxNets

./: .gitignore  README.md  environment-cpu.yml  environment-gpu.yml  setup.cfg  setup.sh
jaxnets/: __init__.py
jaxnets/datasets/: __init__.py  base.py
jaxnets/models/: __init__.py  feedforward.py  initializers.py
jaxnets/samplers/: __init__.py  base.py
jaxnets/utils/: __init__.py  admin.py  experimenter.py  launcher.py  metrics.py  pull_recent_hpc.py  pull_recent_hpc.sh  visualization.py
