[metadata]
name = jaxnets
version = attr: jaxnets.__version__
url = "https://github.com/leonlufkin/JaxNets/"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    jupyter
    ipdb
    ipython

    pandas>=2.0
    matplotlib
    numpy
    nptyping
    seaborn
    tqdm

    equinox
    optax
    wandb

[options.packages.find]
include = jaxnets*
